dev: update project

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <title>Farm Habit - Construye habitos saludables</title>
   </head>
   <body>
+    <div id="add"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
